--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,22 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  auto_route: ^1.0.2
   bloc: ^7.0.0
+  dartz: ^0.9.2
+  flex_color_scheme: ^2.1.1
   flutter_bloc: ^7.0.0
+  get_it: ^6.0.0
   intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  auto_route_generator: ^1.0.2
   bloc_test: ^8.0.0
-  mocktail: ^0.1.0
+  build_runner: ^1.12.2
+  freezed: ^0.14.0-nullsafety.1
+  mocktail: ^0.1.1
   very_good_analysis: ^2.0.0
 
 flutter:
