--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,3 +28,8 @@ jobs:
           path: "./coverage/lcov.info"
           min_coverage: 60
           exclude: "**/*_observer.dart **/change.dart **/*g.dart **/*gr.dart **/*.freezed.dart"
+      
+      - name: Upload Report Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
